# advanced-memory

./: .env.example  .gitignore  Dockerfile  IMPLEMENTATION_STATUS.md  README.md  docker-compose.yml  pyproject.toml  setup.bat  setup.sh
docs/: Combining GraphRAG and Mem0_.md  README.md  application.md
examples/: usage_example.py
infrastructure/: main.tf  terraform.tfvars.example
monitoring/: prometheus.yml
src/advanced_memory/: __init__.py  config.py  logging_config.py  main.py  mcp_server.py
src/advanced_memory/models/: __init__.py  knowledge_models.py  mcp_models.py  memory_models.py
src/advanced_memory/providers/: __init__.py  knowledge_provider.py  memory_provider.py
tests/: conftest.py  test_knowledge_provider.py  test_mcp_server.py  test_memory_provider.py
